bug(login): solve login page overflowing viewport

--- a/src/components/pages/LoginPage/LoginPage.css
+++ b/src/components/pages/LoginPage/LoginPage.css
@@ -4,6 +4,7 @@
 }
 
 .login-form label {
+  width: unset;
   height: unset;
 }
 
